--- a/locationsyncservice/build.gradle
+++ b/locationsyncservice/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'com.squareup.okhttp3:okhttp:3.12.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 }
 
